<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SMS Filter</string>
    <string name="action_settings">Settings</string>
    <string name="hint_category_name">Category Name</string>
    <string name="promo_text">SMS Filter, a free Android app</string>
    <string name="hint_search_contact">Search</string>
    <string name="title_section_inbox">Inbox</string>
    <string name="title_section_categories">Categories</string>
    <string name="title_section_about">About</string>
	<string name="add_category_text">Add new category</string>
	<string name="select_contact_text">Select contacts associated</string>
	<string name="button_save">Save</string>
	<string name="button_done">Done</string>
	<string name="button_refresh">Refresh</string>
	<string name="button_edit">Edit</string>
	<string name="button_delete">Delete</string>
	<string name="button_close">Close</string>
	<string name="button_add_to_new_category">Add to a new category</string>
</resources>
