<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="400dp"
    android:paddingTop="5dp" >
    
    <ImageButton
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:src="@drawable/ic_action_save"
        android:layout_marginTop="-5dp"
        android:contentDescription="@string/button_save" />

    <EditText
        android:id="@+id/edittext_category_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_category_name"
        android:background="@drawable/selector_edit_text_border"
        android:layout_toLeftOf="@id/button_save"
        android:inputType="textCapWords"
        android:padding="16dp"
        android:layout_marginLeft="2dp" />
    
    <View
        android:id="@+id/view_seperator"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/darker_gray"
        android:layout_below="@id/edittext_category_name" />
    
    <RelativeLayout
        android:id="@+id/relative_layout_add_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:background="@drawable/listview_item_selector"
        android:layout_below="@id/view_seperator"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <TextView
            android:id="@+id/button_add_categry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/select_contact_text"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/title_section_categories"
            android:src="@drawable/button_add" />
        
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@android:color/darker_gray"
        android:layout_below="@id/relative_layout_add_contact" />
    
    <ListView
        android:id="@+id/listview_contact_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/relative_layout_add_contact" >
    </ListView>

</RelativeLayout>